Added nav bar button movements

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
             <nav>
                 <ul class = "nav_links">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#whoarewe">About Us</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">FAQ'S</a></li>
                 </ul>
             </nav>
-            <a class="cta" href = "#"><button>Sign Up</button></a>
+            <a class="cta" href = "#" ><button>Sign Up</button></a>
         </header>
         <div style="height: auto">
             <img src="finishedimage2.jpg" alt=" " style="width: 100%;max-height: 100%" />
         </div>
-        <div class = "whatis">
+        <div class = "whatis" id = whatisit>
             <h1 class = "headtop">What are learning pods?</h1>
             <h2 class = "headtext">Learning pods are a new, safe way to allow kids to meet and study together. Enjoy the fun of school during COVID-19. Experience now using Learning Pods.</h2>
         </div>
-       <div class = "whowe">
+       <div class = "whowe" id = whoarewe>
             <h1 class = "headtop">Who are we?</h1>
             <h2 class = "headtext">Learning pods is a student run, non-profit grassroots organization dedicated to helping students learn and grow outside of the classroom. </h2>
         </div>
