--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
        <div class = "whowe" id = whoarewe>
             <h1 class = "headtop">Who are we?</h1>
-            <h2 class = "headtext">Learning pods is a student run, non-profit grassroots organization dedicated to helping students learn and grow outside of the classroom. </h2>
+            <h2 class = "headtext">Learning Pods is a student run, non-profit grassroots organization dedicated to helping students learn and grow outside of the classroom. </h2>
         </div>
     </body>
 
