Added nav button navigation

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <ul class = "nav_links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#whoarewe">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">FAQ'S</a></li>
+                    <li><a href="#FAQ">FAQ'S</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
-            <a class="cta" href = "#" ><button>Sign Up</button></a>
+            <a class="cta" href = "#" ><button>Sign Up / Log In</button></a>
         </header>
         <div style="height: auto">
             <img src="finishedimage2.jpg" alt=" " style="width: 100%;max-height: 100%" />
@@ -30,7 +30,18 @@
         </div>
        <div class = "whowe" id = whoarewe>
             <h1 class = "headtop">Who are we?</h1>
-            <h2 class = "headtext">Learning pods is a student run, non-profit grassroots organization dedicated to helping students learn and grow outside of the classroom. </h2>
+            <h2 class = "headtext">Supported from the Rishi Kumar for Congress campaign, Learning pods is a student run, non-profit grassroots organization dedicated to helping students learn and grow outside of the classroom. We realized because of the corona virus many students are not getting the learning opportunities they desired. Hence, learning pod stepped in. We have a fascination in tech and try to help our community everyday. We love our community and try to give back in all ways possible.</h2>
+        </div>
+        <div class = "faq" id = FAQ>
+            <h1 class = "headtop">FAQ'S</h1>
+            <h2 class = "headtext">Q: Why learning pods</h2>
+            <h2 class = "headtext">A: Because of its universal use and ease of use. It helps other with minimal use!</h2>
+            <h2 class = "headtext">Q: How do I sign up?</h3>
+            <h2 class = "headtext">Simply click the sign up button in the top left hand corner in order to sign up!</h2>
+        </div>
+        <div class = "whowe" id = contact>
+            <h1 class = "headtop">Contact Info</h1>
+            <h2 class = "headtext">Email : rishicongress2020@gmail.com</h2>
         </div>
     </body>
 
