--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
-            <a class="cta" href = "#" ><button>Sign Up / Log In</button></a>
+            <a class="cta" href = "loginpage.html" ><button>Sign Up / Log In</button></a>
         </header>
         <div style="height: auto">
             <img src="finishedimage2.jpg" alt=" " style="width: 100%;max-height: 100%" />
