Added new dashboard features

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,5 +10,8 @@
         <meta name = "google-signin-client_id" content="109287550034-163r9566bl2oapkjopum362e796kdah4.apps.googleusercontent.com">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
     </head>
-    
+    <body style = "background-color: #1f1f22;">
+        <h1 class = "headtop"> DASHBOARD </h1>
+    </body>
+
 </html>
