--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name = "description" content="">
         <meta name = "viewport" content = "width=device-width, initial-scale=1">
         <link rel = "stylesheet" href = "styles.css">
+        <script>localStorage.clear();</script>
     </head>
     <body style = "background-color: #1f1f22;">
         <header>
