--- a/dashboard.html
+++ b/dashboard.html
@@ -11,6 +11,18 @@
         <script src="https://apis.google.com/js/platform.js" async defer></script>
     </head>
     <body style = "background-color: #1f1f22;">
+        <header>
+            <img class = "logo" src = "newlogo2.svg" alt = "logo">
+            <nav>
+                <ul class = "nav_links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">About Us</a></li>
+                    <li><a href="index.html">FAQ'S</a></li>
+                    <li><a href="index.html">Contact</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href = "loginpage.html" ><button>Sign Up / Log In</button></a>
+        </header>
         <h1 class = "headtop"> DASHBOARD </h1>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
         <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
