--- a/loginpage.html
+++ b/loginpage.html
@@ -41,7 +41,7 @@
             <nav>
                 <ul class = "nav_links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">SCREWEDD</a></li>
+                    <li><a href="index.html">About Us</a></li>
                     <li><a href="index.html">FAQ'S</a></li>
                     <li><a href="index.html">Contact</a></li>
                 </ul>
@@ -69,11 +69,24 @@
 
     <script>
         function onSignIn(googleUser) {
-            localStorage.setItem("uid", googleUser.getAuthResponse().id_token);
+            var gotuid =  googleUser.getBasicProfile().getId();
+            localStorage.setItem("uid", gotuid);
             localStorage.setItem("name", googleUser.getBasicProfile().getName());
-            console.log(googleUser.getAuthResponse().id_token);
+            console.log(gotuid);
             document.querySelector('#name').innerText = googleUser.getBasicProfile().getName();
-            window.location = "infoform.html"
+            var ref = firebase.database().ref("Schools/" + gotuid);
+            firebase.database().ref("Name/" + gotuid).set("KSHITIJ TEOTIA");
+            console.log("NAME".concat(gotuid));
+            ref.once("value")
+                .then(function(snapshot) {
+                    var a = snapshot.exists();  
+                    if(a){
+                        window.location = "dashboard.html";
+                    }else{
+                        window.location = "infoform.html";
+                    }
+                });
+
         }
     </script> 
 
