--- a/dashboard.html
+++ b/dashboard.html
@@ -31,42 +31,11 @@
             https://firebase.google.com/docs/web/setup#available-libraries -->
         <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-analytics.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
-
-        <script>
-            // Your web app's Firebase configuration
-            var firebaseConfig = {
-                apiKey: "AIzaSyAIp39HseHW9TVYGxT6cSOnu8fHuvRxlMQ",
-                authDomain: "learning-pod.firebaseapp.com",
-                databaseURL: "https://learning-pod.firebaseio.com",
-                projectId: "learning-pod",
-                storageBucket: "learning-pod.appspot.com",
-                messagingSenderId: "109287550034",
-                appId: "1:109287550034:web:61c4e5cdddc47c8ec0038b",
-                measurementId: "G-45LY71VZMZ"
-            };
-            // Initialize Firebase
-            firebase.initializeApp(firebaseConfig);
-            firebase.analytics();
-        </script>
-
+        <script src = "firebaseConfig.js"></script>
+        <script src = "index.js"></script>
         <div style = "text-align: center;">
             <button style="margin-right: 10px;" onclick="moveToVirtual()">Virtual</button>
             <button onclick="moveToInPerson()">In Person</button>
         </div>
-
-        <script>
-            function moveToVirtual(){
-                window.location = "virtual.html"
-            }
-
-            function moveToInPerson(){
-                window.location = "inperson.html";
-            }
-            
-        </script>
-
-
-
     </body>
-
 </html>
