Added logic to create lobbies and keep memory of the lobbies

--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,8 @@
         <script src = "index.js"></script>
         <div style = "text-align: center;">
             <button style="margin-right: 10px;" onclick="moveToVirtual()">Virtual</button>
-            <button onclick="moveToInPerson()">In Person</button>
+            <button style="margin-right: 10px;" onclick="moveToInPerson()">In Person</button>
+            <button onclick="editInfo()">Edit Info</button>
         </div>
     </body>
 </html>
