--- a/infoform.html
+++ b/infoform.html
@@ -59,6 +59,12 @@
                 <input name = "dropdown" id = "enterin"style="padding-left: 10px; margin: auto; height: 100px; width: 135px; margin-left: auto; margin-right: auto; float: left;"></input>
             </form>
         </div>
+        <div class = "headtop" style="padding-top: 250px;">
+            <h1 style="float: left;">Enter your preferred email:   </h1>
+            <form style="padding-left: 700px">
+                <input name = "emailin" id = "getemail"style="padding-left: 10px; margin: auto; height: 100px; width: 135px; margin-left: auto; margin-right: auto; float: left;"></input>
+            </form>
+        </div>
         <div style="padding-top: 250px; text-align: center">
             <button type = "button" onclick="clickedFunc()">Submit</button>
     </body>    
