--- a/displaypod.html
+++ b/displaypod.html
@@ -24,6 +24,7 @@
             <a class="cta" href = "loginpage.html" ><button>Sign Up / Log In</button></a>
         </header>
         <h1 class = "headtop"> Pod Display </h1>
+        <table id = "podtable" width = "100%"></table>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
         <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
 
@@ -34,6 +35,5 @@
         <script src = "firebaseConfig.js"></script>
         <script src = "index.js"></script>
         <script src = "loaddata.js"></script>
-        <table id = "podtable" class = "display" width = "100%"></table>
     </body>
 </html>
