--- a/infoform.html
+++ b/infoform.html
@@ -11,6 +11,9 @@
         <script src="https://apis.google.com/js/platform.js" async defer></script>
     </head>
     <body style = "background-color: #1f1f22;">
+        <script type="text/javascript">
+            window.addEventListener('keydown',function(e){if(e.keyIdentifier=='U+000A'||e.keyIdentifier=='Enter'||e.keyCode==13){if(e.target.nodeName=='INPUT'&&e.target.type=='text'){e.preventDefault();return false;}}},true);
+        </script>
         <!-- The core Firebase JS SDK is always required and must be listed first -->
         <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
 
