--- a/displaypod.html
+++ b/displaypod.html
@@ -9,6 +9,34 @@
         <link rel = "stylesheet" href = "styles.css">
         <meta name = "google-signin-client_id" content="109287550034-163r9566bl2oapkjopum362e796kdah4.apps.googleusercontent.com">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+            table {
+                margin-left: auto;
+                margin-right: auto;
+                border-style: ridge;
+                border: 20px 
+            }
+            th {
+                color:rgba(0, 131, 169, 1);
+                text-overflow: initial;
+                font-family: "Montserrat", sans-serif;
+                font-weight: 1000;
+                font-size: 24px;
+                border: 15px groove rgba(0, 131, 169, 1);
+                padding: 15px
+            }
+            td {
+                color:white;
+                text-overflow: initial;
+                font-family: "Montserrat", sans-serif;
+                font-weight: 500;
+                font-size: 24px;
+                /* background-color: white; */
+                border: 15px groove rgba(0, 131, 169, 1);
+                padding: 15px
+            }
+        </style>
     </head>
     <body style = "background-color: #1f1f22;">
         <header>
@@ -34,6 +62,21 @@
         <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
         <script src = "firebaseConfig.js"></script>
         <script src = "index.js"></script>
+        <table id="myTable">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>School</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+            <tfoot>
+                <tr>
+                </tr>
+            <tfoot>
+        </table>
         <script src = "loaddata.js"></script>
     </body>
 </html>
