Finished Virtual Pairing Algorithm

--- a/virtual.html
+++ b/virtual.html
@@ -36,8 +36,8 @@
         <script src = "index.js"></script>
 
         <div style = "text-align: center;">
-            <button style="margin-right: 10px;" onclick="createPod()">Create A Learning Pod</button>
-            <button onclick="joinPod()">Join A Learning Pod</button>
+            <button style="margin-right: 10px;" onclick="createVPod()">Create A Learning Pod</button>
+            <button onclick="joinVPod()">Join A Learning Pod</button>
         </div>
     </body>
 </html>
