--- a/dashboard.html
+++ b/dashboard.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset = "utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Learning Pod</title>
-        <meta name = "description" content="">
-        <meta name = "viewport" content = "width=device-width, initial-scale=1">
-        <link rel = "stylesheet" href = "styles.css">
-        <meta name = "google-signin-client_id" content="109287550034-163r9566bl2oapkjopum362e796kdah4.apps.googleusercontent.com">
-        <script src="https://apis.google.com/js/platform.js" async defer></script>
-    </head>
-    <body style = "background-color: #1f1f22;">
-        <header>
-            <img class = "logo" src = "newlogo2.svg" alt = "logo">
-            <nav>
-                <ul class = "nav_links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">About Us</a></li>
-                    <li><a href="index.html">FAQ'S</a></li>
-                    <li><a href="index.html">Contact</a></li>
-                </ul>
-            </nav>
-            <a class="cta" href = "loginpage.html" ><button>Sign Up / Log In</button></a>
-        </header>
-        <h1 class = "headtop"> DASHBOARD </h1>
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
 
-        <!-- TODO: Add SDKs for Firebase products that you want to use
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Learning Pod</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <meta name="google-signin-client_id"
+        content="109287550034-163r9566bl2oapkjopum362e796kdah4.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+</head>
+
+<body style="background-color: #1f1f22;">
+    <header>
+        <img class="logo" src="newlogo2.svg" alt="logo">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">About Us</a></li>
+                <li><a href="index.html">FAQ'S</a></li>
+                <li><a href="index.html">Contact</a></li>
+            </ul>
+        </nav>
+        <a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
+    </header>
+    <h1 class="headtop"> DASHBOARD </h1>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
             https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-analytics.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
-        <script src = "firebaseConfig.js"></script>
-        <script src = "index.js"></script>
-        <div style = "text-align: center;">
-            <button style="margin-right: 10px;" onclick="moveToVirtual()">Virtual</button>
-            <button style="margin-right: 10px;" onclick="moveToInPerson()">In Person</button>
-            <button onclick="editInfo()">Edit Info</button>
-        </div>
-    </body>
+    <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
+    <script src="firebaseConfig.js"></script>
+    <script src="index.js"></script>
+    <div style="text-align: center;">
+        <button style="margin-right: 10px;" onclick="moveToVirtual()">Virtual</button>
+        <button style="margin-right: 10px;" onclick="moveToInPerson()">In Person</button>
+        <button onclick="editInfo()">Edit Info</button>
+    </div>
+</body>
+
 </html>
