--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body style="background-color: #151b54;">
     <header>
-        <img class="logo" src="newlogo2.svg" alt="logo">
+        <a href="https://www.qries.com/">
+            <img class="logo" src="newlogo2.svg" alt="logo">
+        </a>
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
