--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body style="background-color: #151b54;">
     <header>
-        <a href="https://www.qries.com/">
+        <a href="index.html">
             <img class="logo" src="newlogo2.svg" alt="logo">
         </a>
         <nav>
