--- a/loginpage.html
+++ b/loginpage.html
@@ -32,7 +32,9 @@
         }
     </script>
     <header>
-        <img class="logo" src="newlogo2.svg" alt="logo">
+        <a href="index.html">
+            <img class="logo" src="newlogo2.svg" alt="logo">
+        </a>
         <nav>
             <ul class="nav_links">
                 <li><a href="index.html">Home</a></li>
