--- a/index.html
+++ b/index.html
@@ -54,5 +54,26 @@
         <h1 class="headtop">Contact Info</h1>
         <h2 class="headtext">Email : rishicongress2020@gmail.com</h2>
     </div>
+    <footer class="foot">
+        <br><br><br><br><br><br>
+        <div id="footer_right">
+            <p>Would you like to support us? </p>
+            <br>
+            <a href="https://rishikumar.com/contribute"> Please contribute here!</a>
+        </div>
+        <div id="footer_left">
+            <img src="https://learningpods--abhimukherjee.repl.co/banner.png" width="700" height="200">
+            <br><br>
+
+            <br>
+            <aside>PAID FOR BY KUMAR FOR CONGRESS 2020 </aside>
+            <aside> COMMITTEE ID C00695866 | FEC ID 1356261 </aside>
+            <aside> Kumar for Congress, P O BOX 2653, Saratoga CA 95070.</aside>
+            <br>
+            <aside>Developed by Abhinav Mukherjee, Kshitij Teotia, Vishnu Potharaju, and Vineet Rao</aside>
+            <br>
+        </div>
+        <br>
+    </footer>
 
 </html>
