--- a/index.html
+++ b/index.html
@@ -52,25 +52,26 @@
     </div>
     <div class="whowe" id=contact>
         <h1 class="headtop">Contact Info</h1>
-        <h2 class="headtext">Email : rishicongress2020@gmail.com</h2>
+        <h2 class="headtext" id="contact">Email : rishicongress2020@gmail.com</h2>
     </div>
     <footer class="foot">
-        <br><br><br><br><br><br>
+        <br><br><br><br><br>
         <div id="footer_right">
-            <p>Would you like to support us? </p>
+            <h2 class="headtop">Would you like to support us?</h2>
             <br>
             <a href="https://rishikumar.com/contribute"> Please contribute here!</a>
+            <br><br>
         </div>
-        <div id="footer_left">
+        <div style="text-align: center;">
             <img src="https://learningpods--abhimukherjee.repl.co/banner.png" width="700" height="200">
             <br><br>
 
             <br>
-            <aside>PAID FOR BY KUMAR FOR CONGRESS 2020 </aside>
-            <aside> COMMITTEE ID C00695866 | FEC ID 1356261 </aside>
-            <aside> Kumar for Congress, P O BOX 2653, Saratoga CA 95070.</aside>
+            <h2 class="footer-text"> COMMITTEE ID C00695866 | FEC ID 1356261 </h2>
+            <h2 class="footer-text"> Kumar for Congress, P O BOX 2653, Saratoga CA 95070.</h2>
             <br>
-            <aside>Developed by Abhinav Mukherjee, Kshitij Teotia, Vishnu Potharaju, and Vineet Rao</aside>
+            <h2 class="footer-text">Developed by Abhinav Mukherjee, Kshitij Teotia, Vishnu Potharaju, and Vineet Rao
+            </h2>
             <br>
         </div>
         <br>
