--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     </div>
     <footer class="foot">
         <br><br><br><br><br>
-        <div id="footer_right">
+        <div style="text-align: center;">
             <h2 class="headtop">Would you like to support us?</h2>
             <br>
             <a href="https://rishikumar.com/contribute"> Please contribute here!</a>
             <br><br>
         </div>
-        <div style="text-align: center;">
+        <div style="text-align: center; color: white;">
             <img src="https://learningpods--abhimukherjee.repl.co/banner.png" width="700" height="200">
             <br><br>
 
