--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <a href="https://rishikumar.com/contribute"> Please contribute here!</a>
             <br><br>
         </div>
-        <div style="text-align: center; color: white;">
-            <img src="https://learningpods--abhimukherjee.repl.co/banner.png" width="700" height="200">
+        <div class="credits"">
+            <img src=" https://learningpods--abhimukherjee.repl.co/banner.png" width="700" height="200">
             <br><br>
 
             <br>
