--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
+                <li><a href="how_it_works.html">How it works</a></li>
                 <li><a href="#whoarewe">About Us</a></li>
                 <li><a href="#FAQ">FAQ'S</a></li>
                 <li><a href="#contact">Contact</a></li>
