--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="how_it_works.html">How it works</a></li>
                 <li><a href="#whoarewe">About Us</a></li>
-                <li><a href="#FAQ">FAQ'S</a></li>
+                <li><a href="FAQs.html">FAQ'S</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
