--- a/FAQs.html
+++ b/FAQs.html
@@ -6,7 +6,7 @@
         <title>Learning Pod</title>
         <meta name = "description" content="">
         <meta name = "viewport" content = "width=device-width, initial-scale=1">
-        <link rel = "stylesheet" href = "home.css">
+        <link rel = "stylesheet" href = "styles.css">
     </head>
     <body style = "background-color: #151B54;">
         <header>
