--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
                 <li><a href="how_it_works.html">How it works</a></li>
-                <li><a href="#whoarewe">About Us</a></li>
+                <li><a href="who_are_we.html">About Us</a></li>
                 <li><a href="FAQs.html">FAQ'S</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
