--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="whowe" id=contact>
         <h1 class="headtop">Contact Info</h1>
-        <h2 class="headtext" id="contact">Email : rishicongress2020@gmail.com</h2>
+        <h2 class="headtext" id="contact">Email : campaign@rishi2020.com</h2>
     </div>
     <footer class="foot">
         <br><br><br><br><br>
