--- a/how_it_works.html
+++ b/how_it_works.html
@@ -21,8 +21,8 @@
                     
                 </ul>
             </nav>
-            <a class="cta" href = "#" ><button>Sign Up</button></a>
-        </header>
+              <a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
+      </header>
         <div style="height: auto; width:auto">
         
         </div>
