--- a/FAQs.html
+++ b/FAQs.html
@@ -21,7 +21,7 @@
                     
                 </ul>
             </nav>
-            <a class="cta" href = "#" ><button>Sign Up</button></a>
+              <a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
         </header>
         
         <div class = "faqs" id = FAQs>
