--- a/who_are_we.html
+++ b/who_are_we.html
@@ -27,7 +27,7 @@
                     
                 </ul>
             </nav>
-            <a class="cta" href = "#" ><button>Sign Up</button></a>
+              <a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
         </header>
         <div style="height: auto; width:auto">
         
