--- a/FAQs.html
+++ b/FAQs.html
@@ -17,7 +17,7 @@
                     <li><a href="how_it_works.html">How It Works</a></li>
                     <li><a href="FAQs.html">FAQ'S</a></li>
                     <li><a href="who_are_we.html">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     
                 </ul>
             </nav>
