--- a/who_are_we.html
+++ b/who_are_we.html
@@ -40,7 +40,7 @@
     <div id="box_10">
       <div id="pic">
 
-        <img src="IMG_7426.JPG" height="400" width="380" style="padding-left:110px" id="kumar">
+        <img src="IMG_7426.jpg" height="400" width="380" style="padding-left:110px" id="kumar">
         <div style="position:relative; left:80px; top:2px;">
           <h4> Congressional Candidate Rishi Kumar </h4>
           <br>
