--- a/who_are_we.html
+++ b/who_are_we.html
@@ -2,87 +2,84 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Learning Pods</title>
-  <link href="styles.css" rel="stylesheet" type="text/css" />
-  <style type="text/css">
-    <!--
-    .tab {
-      margin-left: 40px;
-    }
-    -->
-  </style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Learning Pods</title>
+	<link href="styles.css" rel="stylesheet" type="text/css" />
+	<style type="text/css">
+		.tab {
+			margin-left: 40px;
+		}
+	</style>
 
 </head>
 
-<body>
+<body style="background-color: #151B54;">
+	<header>
+		<img class="logo" src="newlogo2.svg" alt="logo">
+		<nav>
+			<ul class="nav_links">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="how_it_works.html">How It Works</a></li>
+				<li><a href="FAQs.html">FAQ'S</a></li>
+				<li><a href="who_are_we.html">About Us</a></li>
+				<li><a href="#contact">Contact</a></li>
 
-  <body style="background-color: #151B54;">
-    <header>
-      <img class="logo" src="newlogo2.svg" alt="logo">
-      <nav>
-        <ul class="nav_links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="how_it_works.html">How It Works</a></li>
-          <li><a href="FAQs.html">FAQ'S</a></li>
-          <li><a href="who_are_we.html">About Us</a></li>
-          <li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+		<a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
+	</header>
+	<div style="height: auto; width:auto"></div>
 
-        </ul>
-      </nav>
-      <a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
-    </header>
-    <div style="height: auto; width:auto">
+	<div id="box_10">
+		<div id="pic">
 
-    </div>
+			<img src="IMG_7426.jpg" height="400" width="380" style="padding-left:110px" id="kumar">
+			<div style="position:relative; left:80px; top:2px;">
+				<h4> Congressional Candidate Rishi Kumar </h4>
+				<br>
+			</div>
+		</div>
+		<br>
+		<br>
+		<p>Learning pods is a Kumar for Congress program designed to give students an in-person learning experience
+			through the pandemic. The website and project is led and designed by high school students, who are interns
+			of
+			the Congressional Candidate Rishi Kumar.
+		</p>
+		<br>
+		<br>
+		<br>
+		<br>
+		<p> This project is sponsored by Rishi Kumar, a Congressional Candidate aiming to help our community during this
+			pandemic. Kumar is a Saratoga Councilmember running for Congressman of CA-D18 this year. Kumar sponsored and
+			started this project to help empower youth and give them a new, in-person learning opportunity during the
+			pandemic. </p>
 
-    <div id="box_10">
-      <div id="pic">
+	</div>
 
-        <img src="IMG_7426.jpg" height="400" width="380" style="padding-left:110px" id="kumar">
-        <div style="position:relative; left:80px; top:2px;">
-          <h4> Congressional Candidate Rishi Kumar </h4>
-          <br>
-        </div>
-      </div>
-      <br>
-      <br>
-      <p>Learning pods is a Kumar for Congress program designed to give students an in-person learning experience
-        through the pandemic. The website and project is led and designed by high school students, who are interns of
-        the Congressional Candidate Rishi Kumar.
-      </p>
-      <br>
-      <br>
-      <br>
-      <br>
-      <p> This project is sponsored by Rishi Kumar, a Congressional Candidate aiming to help our community during this
-        pandemic. Kumar is a Saratoga Councilmember running for Congressman of CA-D18 this year. Kumar sponsored and
-        started this project to help empower youth and give them a new, in-person learning opportunity during the
-        pandemic. </p>
-    </div>
-    </div>
-    <footer class="foot">
-      <br><br><br><br><br>
-      <div style="text-align: center;">
-        <h2 class="headtop">Would you like to support us?</h2>
-        <br>
-        <a href="https://rishikumar.com/contribute"> Please contribute here!</a>
-        <br><br>
-      </div>
-      <div class="credits"">
+	<footer class="foot">
+		<div style="text-align: center;">
+			<h2 class="support-us-text">Would you like to support us?</h2>
+			<br>
+			<a href="https://rishikumar.com/contribute"> Please contribute here!</a>
+			<br><br>
+		</div>
+		<div class="credits"">
                 <img src=" https://learningpods--abhimukherjee.repl.co/banner.png" width="700" height="200">
-        <br><br>
+			<br><br>
 
-        <br>
-        <h2 class="footer-text"> COMMITTEE ID C00695866 | FEC ID 1356261 </h2>
-        <h2 class="footer-text"> Kumar for Congress, P O BOX 2653, Saratoga CA 95070.</h2>
-        <br>
-        <h2 class="footer-text">Developed by Abhinav Mukherjee, Kshitij Teotia, Vishnu Potharaju, and Vineet Rao
-        </h2>
-        <br>
-      </div>
-      <br>
-    </footer>
+			<br>
+			<h2 class="footer-text"> COMMITTEE ID C00695866 | FEC ID 1356261 </h2>
+			<h2 class="footer-text"> Kumar for Congress, P O BOX 2653, Saratoga CA 95070.</h2>
+			<br>
+			<h2 class="footer-text">Developed by Abhinav Mukherjee, Kshitij Teotia, Vishnu Potharaju, and Vineet Rao
+			</h2>
+			<br>
+		</div>
+		<br>
+	</footer>
 
-  </body>
+</body>
+
+</html>
