--- a/how_it_works.html
+++ b/how_it_works.html
@@ -77,7 +77,7 @@
 
 		<br><br><br><br><br>
 		<footer class="foot">
-			<div style="text-align: center;">
+			<div style="text-align: center; background: #151B54;">
 				<h2 class="headtop">Would you like to support us?</h2>
 				<br>
 				<a href="https://rishikumar.com/contribute"> Please contribute here!</a>
