--- a/loginpage.html
+++ b/loginpage.html
@@ -39,7 +39,7 @@
             <ul class="nav_links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="how_it_works.html">How it Works</a></li>
-                <li><a href="FAQs.html">FAQ's</a></li>
+                <li><a href="FAQs.html">FAQ'S</a></li>
                 <li><a href="who_are_we.html">About Us</a></li>
                 <li><a href="index.html">Contact</a></li>
             </ul>
