--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 
-<body style="background-color: #151B54;">
+<body style="background-color: #151b54;">
     <header>
         <img class="logo" src="newlogo2.svg" alt="logo">
         <nav>
