--- a/displaypod.html
+++ b/displaypod.html
@@ -38,14 +38,15 @@
             }
         </style>
     </head>
-    <body style = "background-color: #1f1f22;">
+    <body style = "background-color: #151b54;">
         <header>
             <img class = "logo" src = "newlogo2.svg" alt = "logo">
             <nav>
                 <ul class = "nav_links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">About Us</a></li>
-                    <li><a href="index.html">FAQ'S</a></li>
+                    <li><a href="how_it_works.html">How it Works</a></li>
+                    <li><a href="who_are_we.html">About Us</a></li>
+                    <li><a href="FAQs.html">FAQ'S</a></li>
                     <li><a href="index.html">Contact</a></li>
                 </ul>
             </nav>
