--- a/displaypod.html
+++ b/displaypod.html
@@ -18,6 +18,7 @@
                 border: 20px 
             }
             th {
+                color:white;
                 color:rgba(0, 131, 169, 1);
                 text-overflow: initial;
                 font-family: "Montserrat", sans-serif;
