--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
-                <li><a href="how_it_works.html">How it works</a></li>
+                <li><a href="how_it_works.html">How it Works</a></li>
                 <li><a href="who_are_we.html">About Us</a></li>
                 <li><a href="FAQs.html">FAQ'S</a></li>
                 <li><a href="#contact">Contact</a></li>
