Make 'please contribute here' buttons

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div style="text-align: center;">
             <h2 class="headtop">Would you like to support us?</h2>
             <br>
-            <a href="https://rishikumar.com/contribute"> Please contribute here!</a>
+            <button href="https://rishikumar.com/contribute"> Please contribute here!</button>
             <br><br>
         </div>
         <div class="credits"">
