--- a/who_are_we.html
+++ b/who_are_we.html
@@ -62,7 +62,7 @@
 		<div style="text-align: center;">
 			<h2 class="support-us-text">Would you like to support us?</h2>
 			<br>
-			<a href="https://rishikumar.com/contribute"> Please contribute here!</a>
+			<button href="https://rishikumar.com/contribute"> Please contribute here!</button>
 			<br><br>
 		</div>
 		<div class="credits"">
