--- a/how_it_works.html
+++ b/how_it_works.html
@@ -32,7 +32,7 @@
 		<div id="box_6">
 			<ul class="whatare_1">
 				<li>
-					<p>Learning pods are a new, safe way to allow kids to meet and study together. </p>
+					<p style="color:##0c008b";>Learning pods are a new, safe way to allow kids to meet and study together. </p>
 				</li>
 				<li>
 					<p> Small groups that kids can meet in to study/play together in person or online </p>
@@ -79,7 +79,7 @@
 			<div style="text-align: center; background: #151B54;">
 				<h2 class="headtop">Would you like to support us?</h2>
 				<br>
-				<button href="https://rishikumar.com/contribute"> Please contribute here!</button>
+				<a href="https://rishikumar.com/contribute"> Please contribute here!</a>
 				<br><br>
 			</div>
 			<div class="credits"">
