--- a/how_it_works.html
+++ b/how_it_works.html
@@ -32,7 +32,7 @@
 		<div id="box_6">
 			<ul class="whatare_1">
 				<li>
-					<p style="color:##0c008b";>Learning pods are a new, safe way to allow kids to meet and study together. </p>
+					<p style="color:#0c008b";>Learning pods are a new, safe way to allow kids to meet and study together. </p>
 				</li>
 				<li>
 					<p> Small groups that kids can meet in to study/play together in person or online </p>
