Fix buttons in footer

--- a/how_it_works.html
+++ b/how_it_works.html
@@ -79,7 +79,7 @@
 			<div style="text-align: center; background: #151B54;">
 				<h2 class="headtop">Would you like to support us?</h2>
 				<br>
-				<button href="https://rishikumar.com/contribute"> Please contribute here!</button>
+				<a href="https://rishikumar.com/contribute"><button> Please contribute here!</button></a>
 				<br><br>
 			</div>
 			<div class="credits"">
