--- a/FAQs.html
+++ b/FAQs.html
@@ -56,7 +56,7 @@
         <div style="text-align: center;">
             <h2 class="headtop">Would you like to support us?</h2>
             <br>
-            <button href="https://rishikumar.com/contribute"> Please contribute here!</button>
+            <a href="https://rishikumar.com/contribute"><button> Please contribute here!</button></a>
             <br><br>
         </div>
         <div class="credits"">
