Added a temporary icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <script>localStorage.clear();</script>
+    <!-- THIS is a temporary icon -->
+        <link rel="icon" href="https://rishikumar.com/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body style="background-color: #151b54;">
