--- a/who_are_we.html
+++ b/who_are_we.html
@@ -11,7 +11,6 @@
 			margin-left: 40px;
 		}
 	</style>
-
 </head>
 
 <body style="background-color: #151B54;">
@@ -30,7 +29,7 @@
 		<a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
 	</header>
 	<div style="height: auto; width:auto"></div>
-
+	<h1>About Us</h1>
 	<div id="box_10">
 		<div id="pic">
 
