--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="https://rishikumar.com/contribute"> Please contribute here!</a>
             <br><br>
         </div>
-        <div class="credits"">
+        <div class="credits">
             <img src=" https://learningpods--abhimukherjee.repl.co/banner.png" width="700" height="200">
             <br><br>
 
