--- a/infoform.html
+++ b/infoform.html
@@ -28,8 +28,9 @@
             <nav>
                 <ul class = "nav_links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">About Us</a></li>
-                    <li><a href="index.html">FAQ'S</a></li>
+                    <li><a href="how_it_works.html">How it Works</a></li>
+                    <li><a href="who_are_we.html">About Us</a></li>
+                    <li><a href="FAQs.html">FAQ'S</a></li>
                     <li><a href="index.html">Contact</a></li>
                 </ul>
             </nav>
