--- a/who_are_we.html
+++ b/who_are_we.html
@@ -22,14 +22,14 @@
 				<li><a href="how_it_works.html">How It Works</a></li>
 				<li><a href="FAQs.html">FAQ'S</a></li>
 				<li><a href="who_are_we.html">About Us</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="index.html#contact">Contact</a></li>
 
 			</ul>
 		</nav>
 		<a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
 	</header>
 	<div style="height: auto; width:auto"></div>
-	<h1>About Us</h1>
+	<h1 class="headtop">About Us</h1>
 	<div id="box_10">
 		<div id="pic">
 
