--- a/how_it_works.html
+++ b/how_it_works.html
@@ -19,7 +19,7 @@
 				<li><a href="how_it_works.html">How It Works</a></li>
 				<li><a href="FAQs.html">FAQ'S</a></li>
 				<li><a href="who_are_we.html">About Us</a></li>
-				<li><a href="index.html">Contact</a></li>
+				<li><a href="index.html#contact">Contact</a></li>
 			</ul>
 		</nav>
 		<a class="cta" href="loginpage.html"><button>Sign Up / Log In</button></a>
