--- a/who_are_we.html
+++ b/who_are_we.html
@@ -41,11 +41,13 @@
 		</div>
 		<br>
 		<br>
+		<div id="box_6">
 		<p>Learning pods is a Kumar for Congress program designed to give students an in-person learning experience
 			through the pandemic. The website and project is led and designed by high school students, who are interns
 			of
 			the Congressional Candidate Rishi Kumar.
 		</p>
+		</div>
 		<br>
 		<br>
 		<br>
